--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,74 @@
-
 body{
     height: 100%; 
     font-family: 'Noto Sans', sans-serif;
     background-color: #ab4493; 
-  } 
-  
-  form{
-    width: 460;
+  }
+  form{  
+    width: 460px; 
     height: auto;
-    margin: 80 auto;
-    border-radius: 10;
-    padding-top: 30;
-    padding-bottom: 20;
-    background-color: white;
-    padding-left: 30;
+    margin: 80px auto;
+    border-radius: 10px;  
+    padding-top: 30px;
+    padding-bottom: 20px;  
+    background-color: white; 
+    padding-left: 30px; 
+    }
+
+  input{
+    background-color: white; 
+    width: 410px; 
+    height: 50px; 
+    border-radius: 5px;  
+    border-style: solid; 
+    border-width: 1px; 
+    border-color: #ab4493; 
+    margin-top: 10px;  
+    padding-left: 10px;
+    margin-bottom: 20px; 
+  }
+  textarea{
+    background-color: white; 
+    width: 405px; 
+    height: 150px; 
+    border-radius: 5px;  
+    border-style: solid; 
+    border-width: 1px; 
+    border-color: #ab4493; 
+    margin-top: 10px;  
+    padding-left: 10px;
+    margin-bottom: 20px; 
+    padding-top: 15px; 
+  }
+  label{
+    display: block;
+    float: left;
+  }
+  button{
+    height: 40px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    text-transform: lowercase;
+    background-color: #ab4493;
+    border-color: #ab4493;
+    border-style: solid;
+    border-radius: 10px;
+    width: 420px;
+    cursor: pointer;
 
   }
-  input{
-    background-color: #ab4493;
-    width: 400;
-    height: 50;
-    border-radius: 3;
-    border-style: solid;
-    border-width: 2;
-    border-color: #ab4493;
-    margin-top: 15;
-    margin-left:22;
 
+
+  h1{
+    font-size: 38px;  
+    text-align: letf; 
+    padding-bottom: 10px; 
+    color: #ab4493;
+}
+h2{
+font-size: 15px; 
+text-align: left;
+padding-bottom:1px ;
+ 
   }
